<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SPEC</string>
    <string name="spec_contact_card">Public Encryption Key.\nSPEC\nreachout@specularx.co\n30819B301406072A8648CE3D020106092B240303020801010D038182000475A87B1946ACB3F3647F6461F860E5517D010B1589F4720E927B6686A71057C9268E320B32BD40182C94B394CBB316FA5EF66FA2723A11ADEBB4DEC0A5B274C76CE2FF7F2A78BE19F8B2FD3317BE1E99F39828532309AA15A5F32A801986E5986AF28C7A2E464390D4C40B85924A0E63E85813F552E27F9527C2E97DFB1D81E1</string>
    <string name="tab_nfc_title">Tap NFC</string>
    <string name="cant_connect_nfc_adapter">Something went wrong. Try again.</string>
    <string name="turn_nfc_on_nfc_wait">NFC is OFF, go to settings and turn it ON.</string>
    <string name="failed_read_only">Read-only tag.\nUse another tag.</string>
    <string name="tag_formatted">Tag has been formatted.\nTap again to save key.</string>
    <string name="cant_format">Unable to format tag to NDEF.\nTry another tag.</string>
    <string name="tag_not_supported">Tag doesn\'t appear to support NDEF format.\nTry another tag.</string>
    <string name="tag_written">Tag written successfully.</string>
    <string name="io_exception_format">Trouble formatting before saving key.\nTap again.</string>
    <string name="cant_find_private_key">Can\'t find a valid Private Key on the NFC tag.\nTry another one.</string>
    <string name="cant_find_data">This tag is empty.\nTry another one.</string>
    <string name="wait_for_nfc_to_read">Waiting for NFC&#8230;</string>
    <string name="title_turn_nfc_on">Activate NFC? If not, keys will be saved on device.</string>
    <string name="tab_nfc_move_to_nfc">Tap NFC tag to save Private Key and delete it from your device.</string>
    <string name="tab_nfc_get_from_nfc">Tap NFC tag to save Private Key on your device.</string>
    <string name="move_private_to_nfc">Device &#8594; NFC</string>
    <string name="get_private_from_nfc">NFC &#8594; Device</string>
    <string name="keys_moved_to_nfc">Keys have been successfully saved on your device.</string>
    <string name="bad_data">Please scan again.</string>
    <string name="get_private_from_qr">QR &#8594; Device</string>
    <string name="print_private_to_qr">Print QR Backup</string>
    <string name="scan_any_qr_widget">Place QR code within box to scan message OR contact.</string>
    <string name="title_scan_error_msg">Please scan again.</string>
    <string name="content_scan_error_msg">Please scan again.</string>
    <string name="scan_contact_explain">Place QR code within box to add contact.</string>
    <string name="decrypt_qr_message_explain">Place QR code within box to read message.</string>
    <string name="widget_name_scanner">SPEC QR Scanner</string>
    <string name="explain_button">Explain</string>
    <string name="session_title">Session Info:</string>
    <string name="session_try_again">Try sending the message again. You have not received a session ID from your contact.\n</string>
    <string name="session_reset">Session has been reset, due to a possible attack or problem.\n</string>
    <string name="session_updated">Session updated, everything is A OK.\n</string>
    <string name="what_is_session">What is a Session?</string>
    <string name="session_explain">A session identifier or session token is a piece
        of data that is used in network communications to identify a session, a series of related
        message exchanges. In SPEC, we want you to be sure that you\'re in touch with the correct contact and not an impersonator.
        Therefore it is vital to keep track of the current state of the conversation and a session ID is one way to achieve that goal.\n</string>
    <string name="session_what_we_did">SPEC generates a secret that the other side (contact) must decrypt and send back.</string>
    <string name="session_ok_explain">You both have the same session, so you\'re communicating with the same person as before.\n</string>
    <string name="dont_trust_session_explain">You have a different session than your contact.
        \nIt\'s possible that your contact is a fake, fraud.
        \nYour session is:\n</string>
    <string name="new_session_trust_created">Your communications are secure, you\'ve seen this contact before.\n</string>
    <string name="unknown_session_explain">First time you\'re receiving a message from this contact, verify identity (email).\n</string>
    <string name="replay_title">Replay Attack Info:</string>
    <string name="what_is_replay">What is a Replay Attack?</string>
    <string name="replay_explain">A replay attack is a form of network attack in which a valid data transmission is
        maliciously or fraudulently repeated or delayed (after possible tampering). These attacks are mostly carried out by an adversary
        whom intercepts the data and retransmits it, possibly as part of a Man in the Middle Attack. SPEC verifies that this type of attack and similar ones aren\'t carried out.</string>
    <string name="replay_not_relevant">No need to be worried about Replay Attacks.\nConversation just started.</string>
    <string name="replay_ok">Everything seems to be A OK.</string>
    <string name="replay_check_failed">Time-stamp is broken.\nDo not trust this message.</string>
    <string name="replay_old">This message has been sent more than 60 hours ago.\nYou should be careful.</string>
    <string name="replay_older_then_latest">You\'ve already received a newer message from this contact.</string>
    <string name="replay_what_we_did">we are checking the last time you received a message from this contact, and the day this message was created</string>
    <string name="replay_qr_what_we_did">messages came from QR may be taking longer to get to you.\nwe decide to give three parameters: now, in this week, in last two weeks, and old</string>
    <string name="hash_title">Crypto Hash Info:</string>
    <string name="hash_explain">The main application of secure cryptographic hashes is verification of message integrity - determining whether any changes have been made to a message or a file. SPEC verifies that your messages are secure and complete. WE FIGHT DATA TAMPERING 24/7.\n</string>
    <string name="what_is_hash">What is a Crypto Hash?</string>
    <string name="hash_what_we_did">SPEC uses the SHA-256 algorithm.</string>
    <string name="hash_qr_what_we_did">to make the hash small we used xor of the entire bytes(divided for 4 bytes packets) that create an integer.\nby encrypting this integer inside the message we making it secure</string>
    <string name="reject_changes">You must have a Private Key in order to make changes.</string>
    <string name="choose_file_to_attach">Choose file to attach.</string>
    <string name="file_to_big">Sorry.\nCan\'t attach file.\nCurrent limit is 50 MB.</string>
    <string name="file_is_empty">File is empty.</string>
    <string name="file_name_shared_contact_card">SharedContactCard.SPEC</string>
    <string name="file_name_friends_qr">SharedQR.SPEC.png</string>
    <string name="file_name_my_public_key">ContactCard.SPEC</string>
    <string name="file_name_my_qr_key">ContactCardQR.SPEC.png</string>
    <string name="file_name_secure_msg">SecureMessage.SPEC</string>
    <string name="file_name_Backup_msg">SecureBackup.SPEC</string>
    <string name="file_name_qr_msg">SecureQRMessageSPEC.png</string>
    <string name="welcome"><b>Let the SPEC magic begin.</b>\nStart bringing privacy and security to your online life.\nEnter email and swipe arrow to the left to generate keys.</string>
    <string name="company_text"><b>SPEC</b> ; HOLD THE KEY TO YOUR SECURITY.</string>
    <string name="drawer_open">Open navigation drawer.</string>
    <string name="drawer_close">Close navigation drawer.</string>
    <string name="decrypt_explain">Decrypt message using barcode scanner, press button to scan:\n</string>
    <string name="hint_msg">Enter message&#8230;</string>
    <string name="explain">SPEC Public Encryption Key.</string>
    <string name="ok">OK</string>
    <string name="hint_enter_your_name">Name (optional)&#8230;</string>
    <string name="hint_enter_your_email">Email&#8230;</string>
    <string name="wait_for_nfc_to_write">Tap NFC to store Private Decryption Key externally</string>
    <string name="skip_save_to_phone">Skip and save key on device</string>
    <string name="create_keys">Generate New Keys</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Failed</string>
    <string name="cant_decrypt">This message hasn\'t been encrypted for you.</string>
    <string name="subject_encrypt">An encrypted message just for you - SPEC MOBILE APP</string>
    <string name="share_public_descripton">My Public Key:</string>
    <string name="fill_all">Please enter a valid email.\nThis email will enable other users to contact you.</string>
    <string name="subject_share">My Public Key - SPEC MOBILE APP</string>
    <string name="contact_exist">Contact already exists.</string>
    <string name="todo">SPEC Security</string>
    <string name="Import">Import Keys</string>
    <string name="failed_to_create_files_to_send">Could not create files.</string>
    <string name="decrypting">Decrypting&#8230;</string>
    <string name="encrypting">Encrypting&#8230;</string>
    <string name="backup">Backup ops&#8230;</string>
    <string name="exit_by_back_notify">Press back again to exit.</string>
    <string name="edit_email">Email: </string>
    <string name="edit_name">Name: </string>
    <string name="editable_fields">Contact\'s Info:</string>
    <string name="not_editable_fields">Security Audit Info:</string>
    <string name="response">Respond</string>
    <string name="new_contact_to_add">Would you like to approve this contact?\nAfter approval you\'ll be able to send this contact secure content.</string>
    <string name="no">Cancel</string>
    <string name="yes">Yes</string>
    <string name="verify_delete_msg">Are you sure you want to delete this contact?</string>
    <string name="no_contacts">"You don\'t have any contacts.\nTo <b>add contacts</b>, share your Public Key under My SPEC, scan a contact\'s QR code or ask a contact to send you their Public Key (Contact Card) to your email.</string>
    <string name="learn_title">The SPEC Magic</string>
    <string name="how_spec">How SPEC Works</string>
    <string name="faq">FAQs</string>
    <string name="blog">SPEC Blog</string>
    <string name="replace_keys_title">Generate New Keys</string>
    <string name="first_text">If you generate new keys, you will lose access to previous data that was encrypted with your Public Key. Think about it before pressing Next.</string>
    <string name="confirm_first"><b>Next</b></string>
    <string name="first_step"><b>1<sup>st</sup></b></string>
    <string name="sec_step"><b>2<sup>nd</sup></b></string>
    <string name="last_step"><b>Final Step</b></string>
    <string name="import_export_manage">Backup My SPEC</string>
    <string name="move_key_to_nfc_and_such">Manage Private Key</string>
    <string name="recreating_keys_title">For enhanced transparency and security, we\'ll generate various keys and let you choose the one that you want, by pressing the QR code below.</string>
    <string name="learn_screen_suggest_us">Feel free to send us suggestions and feedback. Add us to your contacts list by pressing the QR code.</string>
    <string name="check_box_confirm_recreate_keys">I accept</string>
    <string name="back_bt_replace_keys_dlg">Back</string>
    <string name="file_details_time">Time-stamp:</string>
    <string name="file_details_size">Size:</string>
    <string name="file_details_from">Sender:</string>
    <string name="delete_file_verify">Verify</string>
    <string name="regenerate">regenerate keys</string>
    <string name="continue_">continue</string>
</resources>