<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/default_gap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <include layout="@layout/edit_text"/>
    <TextView
        android:textColor="@color/spec_black"
        android:layout_gravity="left"
        android:padding="@dimen/default_gap"
        android:text="@string/file_details_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/spec_black"
        android:layout_gravity="left"
        android:padding="@dimen/default_gap"
        android:text="@string/file_details_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/spec_black"
        android:layout_gravity="left"
        android:padding="@dimen/default_gap"
        android:text="@string/file_details_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="@dimen/default_gap"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:button="@drawable/check_box"
            android:id="@+id/verify"
            android:padding="@dimen/default_gap"
            android:layout_weight="1"
            android:textColor="@color/spec_black"
            android:text="@string/delete_file_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/delete"
            android:padding="@dimen/default_gap"
            android:text="@string/delete"
            android:textColor="@color/spec_black"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        </LinearLayout>

</LinearLayout>