<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_gap"
        android:text="@string/todo"
        android:textColor="@color/spec_black"
        android:textSize="30sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:orientation="vertical"
        android:padding="@dimen/default_gap">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickManage"
            android:padding="@dimen/default_gap"
            android:text="@string/create_keys"
            android:textColor="@color/spec_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />

        <Button
            android:id="@+id/button2"
            android:onClick="onClickManage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_gap"
            android:text="@string/import_export_manage"
            android:textColor="@color/spec_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />

        <Button
            android:id="@+id/button3"
            android:onClick="onClickManage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/move_key_to_nfc_and_such"
            android:textColor="@color/spec_black" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />
        <Button
            android:onClick="notImp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sync_keys_between_devices"
            android:textColor="@color/spec_gray" />
    </LinearLayout>

</LinearLayout>
