<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_gap"
        android:text="@string/learn_title"
        android:textColor="@color/spec_black"
        android:textSize="30sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:orientation="vertical"
        android:padding="@dimen/default_gap">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickAbout"
            android:padding="@dimen/default_gap"
            android:text="@string/how_spec"
            android:textColor="@color/spec_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />

        <Button
            android:id="@+id/button2"
            android:onClick="onClickAbout"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_gap"
            android:text="@string/faq"
            android:textColor="@color/spec_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />

        <Button
            android:onClick="onClickAbout"
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_gap"
            android:text="@string/blog"
            android:textColor="@color/spec_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spec_blue" />

        <Button
            android:onClick="onClickAbout"
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_spec"
            android:textColor="@color/spec_black" />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/default_gap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/spec_black"
            android:padding="@dimen/default_gap"
            android:text="@string/learn_screen_suggest_us"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageButton
            android:onClick="addUs"
            android:padding="@dimen/default_gap"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:src="@drawable/specular_systems_contact_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/version"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
