<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:alpha="0"
    android:animateLayoutChanges="true"
    tools:context="specular.systems.activities.Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_weight="0.5"
            android:id="@+id/text_explain"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/default_gap"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/recreating_keys_title"
            android:layout_width="wrap_content"
            android:layout_height="0dip" />

        <ProgressBar
            android:id="@+id/sec_progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:padding="@dimen/default_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="12sp"
            android:background="@color/black_over_lay"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/default_gap"
            android:paddingRight="@dimen/default_gap"
            android:textColor="@android:color/black"
            android:id="@+id/collecting_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:paddingLeft="@dimen/default_gap"
            android:paddingRight="@dimen/default_gap"
            android:paddingBottom="@dimen/default_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:padding="@dimen/default_gap"
            android:contentDescription="@null"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/image_public"
            android:src="@drawable/spin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/after_create_keys"
            android:visibility="gone"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:padding="@dimen/default_gap"
            android:layout_weight="1"
            android:layout_height="0dip">

            <Button
                android:textColor="@color/spec_black"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/regenerate"
                android:onClick="recreateKeys"
                android:text="@string/regenerate"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="@color/spec_black"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/continue_"
                android:onClick="createKeysManager"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>